--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Elegant dark themes for VS Code with a purr-fect touch",
   "version": "1.0.0",
   "publisher": "nikhil101001",
-  "icon": "/assets/icon.jpg",
+  "icon": "/assets/icon.png",
   "author": {
     "name": "Nikhil Sharma"
   },
